--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -20,6 +20,12 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
+      - name: Debug Folder Structure
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "Listing files recursively:"
+          ls -R
 
       - name: Terraform Init
         working-directory: Terraform/Environment/Dev
