--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -11,8 +11,18 @@ jobs:
       ARM_CLIENT_ID: 18f06224-72a9-43aa-9aa5-a62a7f166499
       ARM_TENANT_ID: 0133099f-1aef-43e5-aff4-92411da359d0
       ARM_SUBSCRIPTION_ID: 52dae8f1-4692-461c-8113-1a00e449ef11
-
+    
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Azure Login
+        uses: Azure/login@v2.3.0
+        with:
+          client-id: 18f06224-72a9-43aa-9aa5-a62a7f166499
+          tenant-id: 0133099f-1aef-43e5-aff4-92411da359d0
+          subscription-id: 52dae8f1-4692-461c-8113-1a00e449ef11
+   
       - name: Checkout Code
         uses: actions/checkout@v4
 
@@ -20,12 +30,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
-      - name: Debug Folder Structure
-        run: |
-          echo "Current working directory:"
-          pwd
-          echo "Listing files recursively:"
-          ls -R
 
       - name: Terraform Init
         working-directory: Terraform/Enviroment/Dev
