--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,6 +2,10 @@ name: Terraform Pipeline
 
 on:
   workflow_dispatch:
+    
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   terraform:
