--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,7 +2,7 @@ name: Terraform Pipeline
 
 on:
   workflow_dispatch:
-    
+
 permissions:
   id-token: write
   contents: read
@@ -11,10 +11,12 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
 
-    # env:
-    #   ARM_CLIENT_ID: 18f06224-72a9-43aa-9aa5-a62a7f166499
-    #   ARM_TENANT_ID: 0133099f-1aef-43e5-aff4-92411da359d0
-    #   ARM_SUBSCRIPTION_ID: 52dae8f1-4692-461c-8113-1a00e449ef11
+    env:
+     ARM_USE_OIDC: true
+     ARM_CLIENT_ID: 18f06224-72a9-43aa-9aa5-a62a7f166499
+     ARM_TENANT_ID: 0133099f-1aef-43e5-aff4-92411da359d0
+     ARM_SUBSCRIPTION_ID: 52dae8f1-4692-461c-8113-1a00e449ef11
+
     
     steps:
       - name: Checkout code
