--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,7 +40,19 @@ jobs:
       - name: Terraform Init
         working-directory: Terraform/Enviroment/Dev
         run: terraform init -upgrade
-
+        
+      - name: Terraform Force Unlock (Safe)
+        working-directory: Terraform/Enviroment/Dev
+        continue-on-error: true
+        run: |
+          echo "🔓 Checking for existing Terraform lock..."
+          LOCK_ID=$(terraform show -json 2>/dev/null | jq -r '.lock_id // empty')
+          if [ ! -z "$LOCK_ID" ]; then
+            echo "Found lock ID: $LOCK_ID — attempting unlock"
+            terraform force-unlock -force $LOCK_ID || true
+          else
+            echo "✅ No existing lock found."
+          fi
 
       - name: Terraform Format Check
         working-directory: Terraform/Enviroment/Dev
