--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,19 +40,7 @@ jobs:
       - name: Terraform Init
         working-directory: Terraform/Enviroment/Dev
         run: terraform init -upgrade
-        
-      - name: Terraform Force Unlock (Safe)
-        working-directory: Terraform/Enviroment/Dev
-        continue-on-error: true
-        run: |
-          echo "🔓 Checking for existing Terraform lock..."
-          LOCK_ID=$(terraform show -json 2>/dev/null | jq -r '.lock_id // empty')
-          if [ ! -z "$LOCK_ID" ]; then
-            echo "Found lock ID: $LOCK_ID — attempting unlock"
-            terraform force-unlock -force $LOCK_ID || true
-          else
-            echo "✅ No existing lock found."
-          fi
+
 
       - name: Terraform Format Check
         working-directory: Terraform/Enviroment/Dev
@@ -69,6 +57,21 @@ jobs:
       - name: Terraform Validate
         working-directory: Terraform/Enviroment/Dev
         run: terraform validate
+
+      - name: Force Unlock State (if locked)
+        working-directory: Terraform/Enviroment/Dev
+        continue-on-error: true
+        run: |
+         echo "🔓 Checking for Azure state lock..."
+         LOCK_ID=$(terraform show -json 2>/dev/null | jq -r '.lock_id // empty')
+         if [ -z "$LOCK_ID" ]; then
+         echo "✅ No local lock_id found, trying remote unlock directly..."
+         terraform force-unlock -force 1d029f46-758e-2026-1d76-d1b7236d2288 || true
+         else
+         echo "Found local lock id $LOCK_ID, unlocking..."
+         terraform force-unlock -force $LOCK_ID || true
+         fi
+         echo "✅ Unlock check complete."
 
       - name: Terraform Plan
         working-directory: Terraform/Enviroment/Dev
