--- a/Flipkart/manifests/deployment.yaml
+++ b/Flipkart/manifests/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flipkart-deployment
+  name: flipkart
 spec:
   replicas: 2
   selector:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: flipkart
-          image: containerregistryloukesh.azurecr.io/flipkart
+          image: containerregistryloukesh.azurecr.io/flipkart:v1
           ports:
             - containerPort: 8080
              
