--- a/Helm/Kubernetes-Infra/templates/Deployment.yaml
+++ b/Helm/Kubernetes-Infra/templates/Deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-nginx-deployment
 spec:
-  replicas: 2
-  selector:                # ✅ selector hamesha spec ke andar hota hai
+  replicas: {{ .Values.replicas }}
+  selector:
     matchLabels:
       app: {{ .Release.Name }}-nginx-deployment
   template:
@@ -13,7 +13,7 @@ spec:
         app: {{ .Release.Name }}-nginx-deployment
     spec:
       containers:
-        - name: {{ .Release.Name }}-nginx-deployment
-          image: nginx
+        - name: {{ .Release.Name }}-nginx-container
+          image: "{{ .Values.image }}"
           ports:
-            - containerPort: 80
+            - containerPort: {{ .Values.containerPort }}
