--- a/Helm/Kubernetes-Infra/Values.yaml
+++ b/Helm/Kubernetes-Infra/Values.yaml
@@ -1,3 +1,8 @@
 replicas: 2
 image: "nginx"
 containerPort: 80
+port: 80
+targetPort: 8080
+Release-Name: nginx-deployment
+Container-Name: nginx-container
+serviceName: my-helm-service
