--- a/Helm/Kubernetes-Infra/templates/Deployment.yaml
+++ b/Helm/Kubernetes-Infra/templates/Deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-nginx-deployment
+  name: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-nginx-deployment
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-nginx-deployment
+        app: {{ .Release.Name }}
     spec:
       containers:
-        - name: {{ .Release.Name }}-nginx-container
+        - name: {{ .Release.Name }}
           image: "{{ .Values.image }}"
           ports:
             - containerPort: {{ .Values.containerPort }}
