--- a/Helm/Kubernetes-Infra/templates/Service.yaml
+++ b/Helm/Kubernetes-Infra/templates/Service.yaml
@@ -6,6 +6,6 @@ spec:
   selector:
     app.kubernetes.io/name: {{ .Release.Name }}
   ports:
-    - protocol: TCP
+    - protocol: {{ .Values.protocol }}
       port: {{ .Values.port }}
       targetPort: {{ .Values.targetPort }}
